--- a/HiveGameClient/HiveGameWPFApp/MainWindow.xaml
+++ b/HiveGameClient/HiveGameWPFApp/MainWindow.xaml
@@ -4,9 +4,20 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HiveGameWPFApp"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        mc:Ignorable="d" >
+    
+    <Viewbox Stretch="Fill">
+        <Grid Height="720" Width="1280">
+       
+            <MediaElement x:Name="IntroVideo" 
+                          LoadedBehavior="Play" 
+                          UnloadedBehavior="Stop"
+                          Source="Video/loadingScreen.avi"
+                          Stretch="Fill"
+                          MediaEnded="IntroVideo_MediaEnded"/>
+
+            <Frame x:Name="NavigationFrame" NavigationUIVisibility="Hidden"  />
+
+        </Grid>
+    </Viewbox>
 </Window>
