--- a/HiveGameClient/HiveGameWPFApp/Views/LobbyView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/LobbyView.xaml
@@ -1,75 +1,86 @@
 ﻿<Page x:Class="HiveGameWPFApp.Views.LobbyView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HiveGameWPFApp.Views"
-        xmlns:p="clr-namespace:HiveGameWPFApp.Properties"
-        mc:Ignorable="d"
-        d:DesignHeight="720" d:DesignWidth="1280">
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:local="clr-namespace:HiveGameWPFApp.Views"
+      xmlns:p="clr-namespace:HiveGameWPFApp.Properties"
+      mc:Ignorable="d"
+      d:DesignHeight="720" d:DesignWidth="1280">
     <DockPanel>
-        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+        <Grid>
+            <!-- Fondo del lobby -->
+            <Border>
+                <Border.Background>
+                    <ImageBrush ImageSource="/Images/Background/LobbyBackground.png" Stretch="UniformToFill" />
+                </Border.Background>
+            </Border>
+
             <Grid>
-                <!-- Fondo del lobby -->
-                <Border>
-                    <Border.Background>
-                        <ImageBrush ImageSource="/Images/Background/LobbyBackground.png" Stretch="UniformToFill" />
-                    </Border.Background>
-                </Border>
+                <!-- Imagen del lobby -->
+                <Image x:Name="imgPet"  
+                       Source="/Images/Icons/Lobby.png"
+                       Width="212" Height="64"
+                       HorizontalAlignment="Left"
+                       VerticalAlignment="Top"
+                       Margin="205,96,0,0"
+                       RenderTransformOrigin="0.5,0.5"
+                       Panel.ZIndex="1"/>
 
-                <Grid>
-                    <!-- Imagen del lobby -->
-                    <Image x:Name="imgPet"  
-                           Source="/Images/Icons/Lobby.png"
-                           Width="212" Height="64"
-                           HorizontalAlignment="Left"
-                           VerticalAlignment="Top"
-                           Margin="205,96,0,0"
-                           RenderTransformOrigin="0.5,0.5"
-                           Panel.ZIndex="1"/>
-
-
-                    <!-- Panel transparente para los mensajes -->
-                    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Background="#66FFFFFF" Margin="640,158,128,153">
-                        <StackPanel x:Name="ChatMessagesPanel">
-                            <!-- Aquí irán los mensajes (esto se llenará dinámicamente) -->
-                        </StackPanel>
-                    </ScrollViewer>
-
-                    <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Background="Black" Height="72" Margin="640,567,128,0">
-
+                <!-- Panel transparente para los mensajes con scroll -->
+                <ScrollViewer VerticalScrollBarVisibility="Auto" 
+                              Background="#66FFFFFF" 
+                              Margin="658,96,142,185">
+                    <StackPanel x:Name="ChatMessagesPanel">
+                        <!-- Aquí irán los mensajes (esto se llenará dinámicamente) -->
                     </StackPanel>
-                    <TextBox x:Name="txtMessageInput"
-                         Width="326" Height="40"
+                </ScrollViewer>
+
+                <!-- Panel para escribir el mensaje y contador de caracteres -->
+                <StackPanel VerticalAlignment="Bottom" Background="Black" Height="84" Margin="658,0,142,96" Orientation="Horizontal">
+                    <!-- TextBox para ingresar el mensaje -->
+                    <TextBox x:Name="txtMessageInput" Height="40"
                          Background="#2F2F2F"
                          Foreground="White"
                          BorderBrush="White"
-
+                         FontWeight="Bold"
                          BorderThickness="1"
                          Padding="5"
-                         FontSize="16"
-                         VerticalAlignment="Top" Margin="669,583,285,0">
+                         FontSize="20"
+                         MaxLength="100"
+                         VerticalAlignment="Center"
+                         Width="300"
+                         TextChanged="TxtMessageInput_TextChanged">
                         <TextBox.Effect>
                             <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10"/>
                         </TextBox.Effect>
                     </TextBox>
 
+                    <!-- Botón para enviar el mensaje -->
                     <Button Content="Enviar"
                         Width="90" Height="40"
                         Background="#FFD700"
                         Foreground="Black"
                         FontWeight="Bold"
                         FontSize="20"
-                        Margin="1035,583,155,0"
-                        VerticalAlignment="Top"
+                        Margin="10,0,0,0"
+                        VerticalAlignment="Center"
                         Click="BtnSendMessage_Click">
                         <Button.Effect>
                             <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10"/>
                         </Button.Effect>
                     </Button>
 
-                </Grid>
+                    <!-- Contador de caracteres -->
+                    <TextBlock x:Name="txtCharCount"
+                               Text="0/100"
+                               Foreground="White"
+                               FontWeight="Bold"
+                               FontSize="16"
+                               Margin="20,0,0,0"
+                               VerticalAlignment="Center"/>
+                </StackPanel>
             </Grid>
-        </ScrollViewer>
+        </Grid>
     </DockPanel>
 </Page>
