--- a/HiveGameClient/HiveGameWPFApp/MainWindow.xaml
+++ b/HiveGameClient/HiveGameWPFApp/MainWindow.xaml
@@ -13,6 +13,7 @@
                           LoadedBehavior="Play" 
                           UnloadedBehavior="Stop"
                           Source="Video/loadingScreen.mp4"
+                          Volume="0.1"
                           Stretch="Fill"
                           MediaEnded="IntroVideo_MediaEnded"/>
 
