--- a/HiveGameClient/HiveGameWPFApp/Views/LoginView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/LoginView.xaml
@@ -11,6 +11,7 @@
     <DockPanel>
         <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
             <Grid>
+
                 <Border>
                     <Border.Background>
                         <ImageBrush ImageSource="/Images/Background/loginBackground.png" Stretch="UniformToFill" />
@@ -22,29 +23,31 @@
                            Width="195" Height="198"
                            HorizontalAlignment="Left"
                            VerticalAlignment="Top"
-                           Margin="685,290,0,0"
+                           Margin="667,252,0,0"
                            RenderTransformOrigin="0.5,0.5"
                            Panel.ZIndex="1"/>
 
                     <!-- Etiqueta para Nombre de Usuario -->
                     <Label x:Name="lblUsername" Content="{x:Static p:Resources.globalLbl_UserName}"
-                            Foreground="#FFD700"
+                            Foreground="#FFC300"
                             FontWeight="Bold"
-                            FontSize="30"
+                            FontSize="25"
                             HorizontalAlignment="Left" 
-                            Margin="941,265,0,0" 
+                            Margin="948,238,0,0" 
                             VerticalAlignment="Top"/>
+
+
 
                     <!-- Cuadro de Texto para Nombre de Usuario -->
                     <TextBox x:Name="txtbUsername"
-                         Width="250"
+                         Width="347"
                          Height="40"
                          HorizontalAlignment="Left"
                          VerticalAlignment="Top"
-                         Margin="896,320,0,0"
+                         Margin="839,287,0,0"
                          Background="#1C1C1C"
                          Foreground="White"
-                         BorderBrush="#FFD700"
+                         BorderBrush="#FFC300"
                          BorderThickness="2"
                          Padding="5"
                          FontSize="16">
@@ -55,12 +58,12 @@
 
                     <!-- Etiqueta para Contraseña -->
                     <Label x:Name="lblPassword" Content="{x:Static p:Resources.globalLbl_Password}"
-                            Foreground="#FFD700"
+                            Foreground="#FFC300"
                             FontWeight="Bold"
-                            FontSize="30"
+                            FontSize="25"
                             HorizontalAlignment="Left" 
-                            Margin="941,380,0,0" 
-                            VerticalAlignment="Top"/>
+                            Margin="952,0,0,0" 
+                            VerticalAlignment="Center"/>
 
                     <!-- Contenedor de la Contraseña (PasswordBox y ToggleButton juntos) -->
                     <Grid HorizontalAlignment="Left" VerticalAlignment="Top" Margin="896,430,0,0">
@@ -70,8 +73,7 @@
                         </Grid.ColumnDefinitions>
 
                         <!-- Campo para ingresar Contraseña (PasswordBox) -->
-                        <Border x:Name="brPassword" CornerRadius="5" BorderBrush="#FFD700" BorderThickness="2"
-                                Width="250" Height="40" Grid.Column="0">
+                        <Border x:Name="brPassword" CornerRadius="5" BorderBrush="#FFC300" BorderThickness="2" Height="40" Grid.Column="0" Margin="-56,-36,-248,36" Grid.ColumnSpan="2">
                             <PasswordBox x:Name="pwbPassword"
                                          FontSize="16"
                                          FontWeight="Medium"
@@ -119,6 +121,48 @@
                             </TextBox.Effect>
                         </TextBox>
                     </Border>
+
+                    <!-- Botones adicionales -->
+                    <Button x:Name="btnLogin" Content="{x:Static p:Resources.btn_Login}"
+                            Width="347" Height="36" FontSize="22"
+                            Background="#FFC300" Foreground="Black"
+                            HorizontalAlignment="Left" VerticalAlignment="Top"
+                            Margin="839,470,0,0" RenderTransformOrigin="0.5,0.393" 
+                            Click="BtnLogin_Click"/>
+
+                    <Button x:Name="btnGuest" Width="167" Height="36" FontSize="20"
+                        Background="Gray" Foreground="White"
+                        HorizontalAlignment="Left" VerticalAlignment="Top"
+                        Margin="840,520,0,0"
+                        Click="BtnGuest_Click">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                            <Image Source="/Images/Icons/Register.png" Width="30" Height="30" Margin="0,0,10,0" />
+                            <TextBlock Text="{x:Static p:Resources.btn_Guest}" FontSize="22" Foreground="White" />
+                        </StackPanel>
+                    </Button>
+
+                    <Button x:Name="btnRegister" 
+                            Width="164" Height="36" FontSize="20"
+                            Background="Gray" Foreground="White"
+                            HorizontalAlignment="Left" VerticalAlignment="Top"
+                            Margin="1022,520,0,0" 
+                            Click="BtnRegister_Click">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                            <Image Source="/Images/Icons/GuestIcon.png" Width="30" Height="30" Margin="0,0,10,0" />
+                            <TextBlock Text="{x:Static p:Resources.btn_CreateAccount}" FontSize="22" Foreground="White" />
+                        </StackPanel>
+                    </Button>
+
+                    <TextBlock Text="{x:Static p:Resources.lbl_RecoverPassword}"
+                               FontSize="16" Foreground="#FFD700"
+                               HorizontalAlignment="Left" VerticalAlignment="Top"
+                               Margin="926,578,0,0" TextDecorations="Underline"
+                               Cursor="Hand"
+                               MouseLeftButtonDown="BtnRegister_Click">
+                        <TextBlock.Effect>
+                            <DropShadowEffect Color="Black" ShadowDepth="2" Opacity="0.7" BlurRadius="5" />
+                        </TextBlock.Effect>
+                    </TextBlock>
                 </Grid>
             </Grid>
         </ScrollViewer>
