--- a/HiveGameClient/HiveGameWPFApp/Views/RegisterView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/RegisterView.xaml
@@ -194,7 +194,7 @@
                         Margin="218,280,0,0" 
                         VerticalAlignment="Top"/>
                     <!-- Cuadro de Texto para Nombre de Usuario -->
-                    <TextBox x:Name="txtName"
+                    <TextBox x:Name="txtEmail"
                          Width="348"
                          Height="40"
                          HorizontalAlignment="Left"
