--- a/HiveGameClient/HiveGameWPFApp/Views/MainMenu.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/MainMenu.xaml
@@ -64,7 +64,7 @@
                     <Image Source="/Images/Icons/Go out.png" 
                        Width="84" Height="85" 
                        MouseDown="Image_MouseDown" 
-                       Cursor="Hand" Margin="10,10,1186,626"/>
+                       Cursor="Hand" Margin="10,10,1186,626" RenderTransformOrigin="0.5,0.506"/>
                 </Grid>
             </Grid>
         </ScrollViewer>
